# doi-paper-scraper

./: .gitignore  README.md  pyproject.toml
src/academic_paper_api/: __init__.py  cli.py  doi_resolver.py  markdown_builder.py  models.py
src/academic_paper_api/scrapers/: __init__.py  acm.py  arxiv.py  base.py  elsevier.py  ieee.py  springer.py  wiley.py
tests/: test_live_scraping.py  test_proxy.py  test_resolvers.py  test_scrapers.py  test_scrapers_mocked.py
